--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=ExpenseTrackingSystem
+
+server.port = 8080
+
+spring.config.import = optional:file:.env[.properties]
+
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.datasource.url=jdbc:postgresql://${DB_URL}
